# mercator

./: .Dockerfile.swo  .poetry.lock.swp  Dockerfile  README.md  pyproject.toml  run-server.sh
.circleci/: config.yml
.github/workflows/: main.yml
mercator/: __init__.py  app.py  mercator.py
mercator/mapper/: mapper.py  mapping.py  preprocessing.py
mercator/mapper/assets/steris/home-page-templates/: 4k_endo_camera.jpg.json  aux_1.jpg.json  begin_case.jpg.json  conference_camera.jpg.json  conference_only.jpg.json  conference_out.jpg.json  enable_privacy.jpg.json  end_case.jpg.json  hd_stream.jpg.json  home_page_root.jpg.json  home_page_root2.jpg.json  in_light_camera.jpg.json  main_window.jpg.json  nurse_pc_camera.jpg.json  surgical_display_1.jpg.json  surgical_display_2.jpg.json  volume_up.jpg.json  wall_display_1.jpg.json  wall_display_2.jpg.json
mercator/mapper/mapping_algorithms/: algo_x.py  contour_matching.py  ocr_space_matching.py  ocr_space_methods.py  template_matching.py
mercator/mapper/ocr_algorithms/: ocr.py
mercator/mapper/utils/: __init__.py
tests/: conftest.py  test_factory.py  test_mercator.py
tests/unit/: test_factory.py
