[tool.poetry]
name = "Mercator"
version = "0.1.0"
description = ""
authors = ["Juan Maldonado <juan.maldonado@phyos.net>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
Flask = "^2.0.1"
coverage = "^5.5"
gunicorn = "^20.1.0"
requests = "^2.26.0"
Werkzeug = "^2.0.1"
opencv-python = "^4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
