[tool.poetry]
name = "Mercator"
version = "0.1.0"
description = ""
authors = ["Juan Maldonado <juan.maldonado@phyos.net>"]
packages = [
    { include = "mapper", from = "mercator"}
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
coverage = "^5.5"
gunicorn = "^20.1.0"
requests = "^2.26.0"
Werkzeug = "^2.0.1"
opencv-python = "^4.5.3"
imutils = "^0.5.4"
pytesseract = "^0.3.8"
jsbeautifier = "^1.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
